--- a/views/create.html
+++ b/views/create.html
@@ -22,8 +22,8 @@
             <h4>Draw, download, and upload the file!</h4>
             <h4>or upload any image you'd like</h4>
         </div>
-
         <div class="row">
+
             <canvas id="can" class="m-2"></canvas>
 
             <div class="col text-center d-inline-block">
@@ -42,34 +42,32 @@
                 <div class="row px-5 py-1 justify-content-center">
                     <div class="color" id="white" onclick="color(this)"></div>
                 </div>
-                <button class="btn btn-secondary" id="btn" onclick="save()">Save</button>
+                <button class="btn btn-secondary" id="btn" onclick="save()"><a download href="" title="ImageName" id="downloadable"><img id="canvasimg">Download</a></button>
                 <button class="btn btn-secondary" id="clr" onclick="erase()">Clear</button>
             </div>
             <div class="col justify-content-center p-0 m-2">
-                <a download href="" title="ImageName" id="downloadable">
-                    <img id="canvasimg" style="display:none;">
-                </a>
-            </div>
-        </div>
-            <form action="#" method="post" enctype="multipart/form-data">
+                <form action="#" method="post" enctype="multipart/form-data">
 
-                <br>
-                <h5>Upload your Drawing/Picture!</h5>
-                <div class="row m-3">
-                    <input type="file" name="fileToUpload" id="fileToUpload">
                     <br>
-                    <span class="text-danger"><check if="{{ isset(@errors['pics']) }}">
+                    <h5>Upload your Drawing/Picture!</h5>
+                    <div class="row m-3">
+                        <input type="file" name="fileToUpload" id="fileToUpload">
+                        <br>
+                        <span class="text-danger"><check if="{{ isset(@errors['pics']) }}">
                     {{ @errors['pics'] }}
                 </check></span>
-                </div>
-                <div class="row">
-                    <div class="col-9">
                     </div>
-                    <div class="col-3 align-self-end">
-                        <button class="form-control btn btn-danger" type="submit" value="Next">Next ></button>
+                    <div class="row">
+                        <div class="col-9">
+                        </div>
+                        <div class="col-3 align-self-end">
+                            <button class="form-control btn btn-danger" type="submit" value="Next">Next</button>
+                        </div>
                     </div>
-                </div>
-            </form>
+                </form>
+            </div>
+        </div>
+
 
 
         <br>
