--- a/views/forgot.html
+++ b/views/forgot.html
@@ -14,24 +14,24 @@
     <!-- Navigation bar -->
     <include href="views/navbar.html"></include>
     <div class="mx-auto mt-5 p-5 grey w-50 w-sm-100">
-        <h1>Sign In!</h1>
+        <h1>Forgot Password</h1>
         <hr>
         <form action="#" method="post">
             <div class="form-group">
                 <label for="username">Username</label>
                 <input type="text" class="form-control" name="username" id="username" aria-describedby="username" placeholder="Enter Username">
             </div>
-            <div class="form-group">
-                <label for="password">Password</label>
-                <input type="password" class="form-control" id="password" name="password" placeholder="Password">
-            </div>
-            <span class="text-danger"><check if="{{ isset(@errors['user']) }}">
-                            {{ @errors['user'] }}
+            <span class="text-success"><check if="{{ isset(@success) }}">
+                            {{ @success }}
+                        </check></span>
+            <span class="text-danger"><check if="{{ isset(@errors) }}">
+                            {{ @errors }}
                         </check></span>
             <br>
-            <a href="signUp" class="btn blue">Sign Up</a>
-            <button type="submit" class="btn blue">Sign In!</button>
-            <a href="forgot" class="btn btn-danger">Forgot Password?</a>
+            <a href="signIn" class="btn blue">Back</a>
+            <check if="{{ !isset(@success) }}">
+                <button type="submit" class="btn blue">Submit</button>
+            </check>
 
         </form>
     </div>
